# code_repository

./: .gitignore  .gitmodules  2D_array  CMakeLists.txt  ColorPoint  MyVector  Person  README.md  big  exam4-9  exam_1  exam_11_3  exam_11_real  exam_7  exam_8-2_about_protected  friend  friend3  merged_20250501_151038.txt
AI/: A_star.py  A_star_algorithmn.py  AstarAlgorithmn2.py  Node.py
AI/HW1/: A_star.py  block.py  main.py  search.py
AI/HW3/: 1.1.py  1.2.py  1.3-2.py  1.3.py  2.2.py  2.3.py  2.4.py
AI/HW3/num1/: 1.1.py  (+3 more)
AI/test/: A_star.py  a.py  a2.py  b.py  c.py
AI/test2/: A_star.py  A_star_algorithmn.py  AstarAlgorithmn2.py  Node.py
Algorithm/C++/: multiply_test.cpp  stalin_sort.cpp
Algorithm/node/: extract.js  extract_map.js  extract_steam_id.js
Algorithm/python/: 10871.py  6060_두_정수_and_연산.py  gcd1.py  stack.py
Data_structure/C/: ac_update.c
Data_structure/C++/: Array.cpp  pointer.cpp  pointer2.cpp  recursive.cpp  single_linked_list.cpp  testfile.cpp
Data_structure/python/: DoubleLinkedList.py  Queue.py  Stack.py  average.py  circleCalculate.py
Linux/: ac_create.c  account.h  dbcreate.c  dbquery.c  dbupdate.c  main.c
Linux/0429/: ac_create.c  ac_query.c  ac_update.c  account.h  student.h
Linux/Documents/: SSHFS_config.md  hardlink_vs_softlink.md
Linux/chap4/: ac_query.c  ac_update.c  account.h
Linux/final/: client.c  locker.h  server.c  socket.h
Linux/finalTermAlternative/: client.c  server.c
Linux/finish/: client.c  locker.h  server.c
Linux/linux_implement/: account.h  dbcreate.c  dbupdate.c  main.c
Linux/shellscripts/: concat.sh  file_concatter.sh  gemini_call.sh  init_custom_prompt.sh  remove_citations.sh  rsync_backup.sh  rsync_backup_customize.sh
Linux/test/: client.c  server.c
NLP/1.3/: LSTM_train.py  RNN_train.py
Nginx/: main_server.conf  nginx_intercepting_proxy_test_code.conf
Nginx/auth_request/: career_auth_request.conf  career_map.conf
cLang/: 2.±âÈ£»ó¼ö  CMakeLists.txt
cLang++/: CMakeLists.txt  test.cpp  test.h
cLang++/0905/: name.cpp
cLang++/0910/: first.cpp  work2-2.cpp  work2-3.cpp
cLang++/0912/: character3.cpp  character4.cpp
cLang++/0919/: Rectangle.cpp  class_1.cpp
cLang++/0924/: Circle.cpp  execute_3-6.cpp
cLang++/0926/: Circle.cpp  PrivateAccessError.cpp
cLang++/0926/Circulator/: Adder.h  Calculator.cpp  Calculator.h  main.cpp
cLang++/1008/: README.md  exam4-2_array.cpp  exam4-5.cpp  pointer_test.cpp
cLang++/1010/: exam1.cpp  exam2.cpp  exam4-9.cpp
cLang++/1017/: exam_04_12.cpp
cLang++/Documents/: static_dynamic.md
cLang++/Documents/static/: dynamic.md
cLang++/GAME/: structure.cpp
cLang++/algorithm/Q/: README.md  preprocessing.c
cLang++/final/1029/: Circle.cpp  Circle2.cpp  Circle_altered.cpp
cLang++/final/1105/: Person.cpp  big.cpp  exam6-3.cpp  exam6-4.cpp
cLang++/final/1107/: Math.cpp  MyVector.cpp  Person.cpp  static_member.cpp  static_member2.cpp  static_member_approach.cpp
cLang++/final/1112/: friend.cpp  friend3.cpp  frient2.cpp
cLang++/final/1114/: ch7_exam_7-6.cpp
cLang++/final/1119/: ColorPoint.cpp  exam_8-2_about_protected.cpp
cLang++/final/1126/: exam_8-3.cpp  exam_8-4.cpp  exam_8-7.cpp
cLang++/final/1128/: README.md  class Shape2 .cpp  exam_9-2.cpp  exam_9-3.cpp  multi_deriven_problem.cpp  shape.cpp
cLang++/final/1203/: exam_9-4.cpp  exam_9-6.cpp
cLang++/final/1203/Shape/: Circle.cpp  Circle.h  Line.cpp  Line.h  Rect.cpp  Rect.h  Shape.cpp  Shape.h  Triangle.cpp  Triangle.h  main.cpp
cLang++/final/1205/: GoodCalc.cpp  exam_10-2.cpp  mySwap.cpp
cLang++/final/1210/: STL1.cpp  stack.cpp
cLang++/final/1210/HW/: exam_3.cpp  exam_4.cpp  exam_7.cpp
cLang++/middle/0905/: hello.cpp  name.cpp  nameCard.cpp
cLang++/middle/0910/: 1.cpp  SimpleC++.cpp  first.cpp  work2-2.cpp  work2-3.cpp  work2-4.cpp
cLang++/middle/0912/: character1.cpp  character2.cpp  character3.cpp  character4.cpp  password.h
cLang++/middle/0919/: Circle.cpp  Rectangle.cpp  class_1.cpp
cLang++/middle/0924/: Circle.cpp  Point.cpp  execute_3-6.cpp  execute_3-8.cpp
cLang++/middle/0926/: Circle.cpp  Circle.h  PrivateAccessError.cpp  StructCircle.cpp  overheadTime.cpp
cLang++/middle/0926/Circulator/: Adder.cpp  Adder.h  Calculator.cpp  Calculator.h  main.cpp
cLang++/middle/1008/: README.md  exam4-1.cpp  exam4-2_array.cpp  exam4-3.cpp  exam4-5.cpp  pointer_test.cpp
cLang++/middle/1010/: exam1.cpp  exam2.cpp  exam4-8.cpp  exam4-9.cpp
cLang++/middle/1017/: exam_04-14.cpp  exam_04_12.cpp  exam_04_13.cpp  string.cpp
cLang++/report1/: report_ch2_no_10.cpp  report_ch2_no_10_another.cpp  report_ch2_no_14.cpp  report_ch2_no_3.cpp
cLang++/report_2/: p1_Tower.cpp  p3_Account.cpp  p3_Account.h  p9_Oval.cpp
cLang++/report_ch4/: exam_2.cpp  exam_6.cpp  exam_9.cpp  quickSort.cpp
cLang++/report_ch5/: exam_1.cpp  exam_11.cpp  exam_11_2.cpp  exam_11_3.cpp  exam_11_real.cpp  exam_7.cpp
cLang/0911/: test1.c  work1.c
cLang/0912/: character1.cpp
cLang/0923/: data_type.c  define_usage.c  exam_1.cp
cLang/0930/: README.md  e1.c  e2.c
cLang/1002/: README.md  bit_operator.c  bit_operator2.c
cLang/1007/: bit_operator.c  우선순위.MD
cLang/1014/: exam2.c  exam3.c
cLang/1016/: README.md  exam1.c
cLang/1030/: ex1_digitalClock.c  infinite_loop.c
cLang/1104/: copilot_test.c  rand.c
cLang/1120/: 2D_array.c
cLang/1127/: isprime.c
cLang/1202/: pibo.c  random.c  random2.c  string.c
cLang/1204/: strcat.c  string_tasks.c
cLang/C1/: 1.형식지정자.MD  inputTest.c  p53.c  p56.c  project1.c  sum2Num.c
cLang/report_1113/: exam_11.c  exam_12.c  exam_15.c  exam_2.c  exam_4.c  exam_7.c  exam_8.c
certbot/: certbot.md  custom.md  ssl_downloader.sh
compiler/project1/: README.md  fileconcat.sh  merged_20250501_135236.txt
greedy/: 거스름돈
memo/: 24-1.md
node/: deploy.sh
operating-system/: all.md  fork_3-10_figure  fork_3-10_figure.c  fork_3-12_figure.c  fork_usage.c  fork_usage_1  fork_usage_1.c  fork_usage_2  fork_usage_2.c  fork_usage_loop  fork_usage_loop.c  fork_usage_shm.c
python/: 10871.py
self_project/: main.py
softwareEngineering/: middle_test.md
정리/: python.txt
(+416 files in other folders)
