add_executable(new_target Data_structure/C++/others/sum.cpp
        Data_structure/C++/others/testfile.cpp
        Data_structure/C++/others/pointer.cpp
        Data_structure/C++/work1/dynamic.cpp
        Data_structure/C++/work1/delete.cpp
        Data_structure/C++/work1/stack.cpp
        Data_structure/C++/stack/infix_postfix_calculate.cpp
        Data_structure/C++/stack/rectangle.cpp
        Data_structure/C++/stack/annotation.cpp
        Data_structure/C++/stack/annotation2.cpp
        Data_structure/C++/stack/stack_test.cpp
        Data_structure/C++/stack/homework_3.cpp)

add_executable(Data_structure_C++_stack_rectangle Data_structure/C++/stack/rectangle.cpp)
add_executable(Data_structure_C++_stack_annotation Data_structure/C++/stack/annotation.cpp
        Data_structure/C++/stack/homework4_5.cpp
        Data_structure/C++/stack/homework4_5.cpp)
add_executable(Data_structure_C++_testfile Data_structure/C++/others/testfile.cpp)
add_executable(Data_structure_C++_stack_annotation2 Data_structure/C++/stack/annotation2.cpp)
add_executable(Data_structure_C++_stack_infix_postfix_calculate Data_structure/C++/stack/infix_postfix_calculate.cpp)
add_executable(Data_structure_C++_stack_stack_test Data_structure/C++/stack/stack_test.cpp)

add_executable(Data_structure_C++_stack_rectangle Data_structure/C++/stack/rectangle.cpp
)
add_executable(Data_structure_C++_stack_annotation Data_structure/C++/stack/annotation.cpp
        Data_structure/C++/others/single_linked_list.cpp
)
add_executable(Data_structure_C++_testfile Data_structure/C++/others/testfile.cpp
)
add_executable(Data_structure_C++_stack_annotation2 Data_structure/C++/stack/annotation2.cpp
)
add_executable(Data_structure_C++_stack_infix_postfix_calculate Data_structure/C++/stack/infix_postfix_calculate.cpp
)


add_executable(Data_structure_C++_stack_homework4_5 Data_structure/C++/stack/homework4_5.cpp)
add_executable(Data_structure_C++_stack_homework_3 Data_structure/C++/stack/homework_3.cpp)