
add_executable(Algorithm_C++_team_report_24_main Algorithm/C++/team_report_24/main.cpp)
add_executable(cLang++_0919_class_1 cLang++/0919/class_1.cpp)
add_executable(Algorithm_C++_algorithm_report_2_merge_sort Algorithm/C++/algorithm_report_2/merge_sort.cpp
        Algorithm/C++/middle_exam/insert_sort.c
        Algorithm/C++/middle_exam/selection_sort.c
        Algorithm/C++/middle_exam/bubble_sort.c
        Algorithm/C++/middle_exam/merge_sort.c)
add_executable(Algorithm_C++_algorithm_report_2_quick_sort Algorithm/C++/algorithm_report_2/quick_sort.cpp)
add_executable(Algorithm_C++_middle_exam_quick_sort Algorithm/C++/middle_exam/quick_sort.c)
add_executable(Algorithm_C++_middle_exam_heap_sort Algorithm/C++/middle_exam/heap_sort.c)
add_executable(Algorithm_C++_middle_exam_countingBucketSort Algorithm/C++/middle_exam/countingBucketSort.cpp)
add_executable(Algorithm_C++_middle_exam_test_heapSort Algorithm/C++/middle_exam/test/heapSort.c)
add_executable(Algorithm_C++_middle_exam_test_quickSort Algorithm/C++/middle_exam/test/quickSort.c)
add_executable(Algorithm_C++_middle_exam_test_countingBucketSort Algorithm/C++/middle_exam/test/countingBucketSort.c)