
add_executable(Algorithm_C++_team_report_24_main Algorithm/C++/team_report_24/main.cpp)
add_executable(cLang++_0919_class_1 cLang++/middle/0919/class_1.cpp)
add_executable(Algorithm_C++_algorithm_report_2_merge_sort Algorithm/C++/algorithm_report_2/merge_sort.cpp
        Algorithm/C++/middle_exam/insert_sort.c
        Algorithm/C++/middle_exam/selection_sort.c
        Algorithm/C++/middle_exam/bubble_sort.c
        Algorithm/C++/middle_exam/merge_sort.c)
add_executable(Algorithm_C++_algorithm_report_2_quick_sort Algorithm/C++/algorithm_report_2/quick_sort.cpp)
add_executable(Algorithm_C++_middle_exam_quick_sort Algorithm/C++/middle_exam/quick_sort.c)
add_executable(Algorithm_C++_middle_exam_heap_sort Algorithm/C++/middle_exam/heap_sort.c)
add_executable(Algorithm_C++_middle_exam_countingBucketSort Algorithm/C++/middle_exam/countingBucketSort.cpp)
add_executable(Algorithm_C++_middle_exam_test_heapSort Algorithm/C++/middle_exam/test/heapSort.c)
add_executable(Algorithm_C++_middle_exam_test_quickSort Algorithm/C++/middle_exam/test/quickSort.c)
add_executable(Algorithm_C++_middle_exam_test_countingBucketSort Algorithm/C++/middle_exam/test/countingBucketSort.c)
add_executable(Algorithm_C++_middle_exam_binary_search_tree Algorithm/C++/middle_exam/binary_search_tree.c)
add_executable(cLang++_final_1029_Circle cLang++/final/1029/Circle.cpp)
add_executable(cLang++_final_1029_Circle_altered cLang++/final/1029/Circle_altered.cpp)
add_executable(cLang++_final_1029_Circle2 cLang++/final/1029/Circle2.cpp)
add_executable(Algorithm_C++_middle_exam_test_mergeSort Algorithm/C++/middle_exam/test/mergeSort.c)
add_executable(cLang++_report_ch4_exam_2 cLang++/report_ch4/exam_2.cpp)
add_executable(cLang++_report_ch4_exam_6 cLang++/report_ch4/exam_6.cpp)
add_executable(cLang++_report_ch4_quickSort cLang++/report_ch4/quickSort.cpp)
add_executable(cLang++_report_ch4_exam_9 cLang++/report_ch4/exam_9.cpp)