cmake_minimum_required(VERSION 3.27)
project(cLang C)

set(CMAKE_C_STANDARD 11)
add_executable(new_target0 1030/ex1_digitalClock.c)
add_executable(new_target1 1030/infinite_loop.c)
add_executable(new_target3 1104/copilot_test.c)
add_executable(new_target4 1104/rand.c)
add_executable(new_target5 report_1113/exam_2.c)
add_executable(new_target5 report_1113/exam_4.c)
add_executable(new_target5 report_1113/exam_7.c)
add_executable(new_target5 report_1113/exam_8.c)
add_executable(new_target5 report_1113/exam_11.c)
add_executable(new_target5 report_1113/exam_12.c)
add_executable(new_target5 report_1113/exam_15 .c)


